--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'studiofont';
+    font-family: 'sans-serif';
 }
 html,body{
     height: 100%;
